# serverless-event-logger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: main.py
app/models/: event.py
app/schemas/: event.py
app/services/: event.py
infrastructure/: app.py
infrastructure/stacks/: database.py  service.py
test/: test_endpoints.py
tests/: test_endpoints.py
